@@ -46,7 +46,6 @@ import org.fao.geonet.api.ApiUtils;
 import org.fao.geonet.api.exception.ResourceNotFoundException;
 import org.fao.geonet.api.exception.WebApplicationException;
 import org.fao.geonet.api.registries.model.ThesaurusInfo;
-import org.fao.geonet.api.tools.i18n.LanguageUtils;
 import org.fao.geonet.constants.Geonet;
 import org.fao.geonet.domain.ISODate;
 import org.fao.geonet.exceptions.BadParameterEx;
@@ -112,12 +111,6 @@ import static org.fao.geonet.kernel.rdf.Selectors.SKOS_NAMESPACE;
 public class KeywordsApi {
     private static final String[] validVocabularyMimeTypes = {"application/rdf+xml"};
 
-    /**
-     * The language utils.
-     */
-    @Autowired
-    LanguageUtils languageUtils;
-
     @Autowired
     SettingManager settingManager;
 
@@ -166,8 +159,7 @@ public class KeywordsApi {
      * @throws Exception the exception
      */
     @io.swagger.v3.oas.annotations.Operation(
-        summary = "Search keywords",
-        description = "")
+        summary = "Search keywords")
     @RequestMapping(
         path = "/search",
         method = RequestMethod.GET,
@@ -180,16 +172,14 @@ public class KeywordsApi {
     @ResponseBody
     public Object searchKeywords(
         @Parameter(
-            description = "Query",
-            required = false
+            description = "Query"
         )
         @RequestParam(
             required = false
         )
             String q,
         @Parameter(
-            description = "Query in that language",
-            required = false
+            description = "Query in that language"
         )
         @RequestParam(
             value = "lang",
@@ -197,8 +187,7 @@ public class KeywordsApi {
         )
             String lang,
         @Parameter(
-            description = "Number of rows",
-            required = false
+            description = "Number of rows"
         )
         @RequestParam(
             required = false,
@@ -206,8 +195,7 @@ public class KeywordsApi {
         )
             int rows,
         @Parameter(
-            description = "Start from",
-            required = false
+            description = "Start from"
         )
         @RequestParam(
             defaultValue = "0",
@@ -215,8 +203,7 @@ public class KeywordsApi {
         )
             int start,
         @Parameter(
-            description = "Return keyword information in one or more languages",
-            required = false
+            description = "Return keyword information in one or more languages"
         )
         @RequestParam(
             value = XmlParams.pLang,
@@ -224,8 +211,7 @@ public class KeywordsApi {
         )
             List<String> targetLangs,
         @Parameter(
-            description = "Thesaurus identifier",
-            required = false
+            description = "Thesaurus identifier"
         )
         @RequestParam(
             required = false
@@ -240,24 +226,21 @@ public class KeywordsApi {
 //        )
 //            String thesauriDomainName,
         @Parameter(
-            description = "Type of search",
-            required = false
+            description = "Type of search"
         )
         @RequestParam(
             defaultValue = "CONTAINS"
         )
             KeywordSearchType type,
         @Parameter(
-            description = "URI query",
-            required = false
+            description = "URI query"
         )
         @RequestParam(
             required = false
         )
             String uri,
         @Parameter(
-            description = "Sort by",
-            required = false
+            description = "Sort by"
         )
         @RequestParam(
             required = false,
@@ -359,23 +342,19 @@ public class KeywordsApi {
         @RequestParam(name = "thesaurus")
             String sThesaurusName,
         @Parameter(
-            description = "Languages.",
-            required = false)
+            description = "Languages.")
         @RequestParam(name = "lang", required = false)
             String[] langs,
         @Parameter(
-            description = "Only print the keyword, no thesaurus information.",
-            required = false)
+            description = "Only print the keyword, no thesaurus information.")
         @RequestParam(required = false, defaultValue = "false")
             boolean keywordOnly,
         @Parameter(
-            description = "XSL template to use (ISO19139 keyword by default, see convert.xsl).",
-            required = false)
+            description = "XSL template to use (ISO19139 keyword by default, see convert.xsl).")
         @RequestParam(required = false)
             String transformation,
         @Parameter(
-            description = "langMap, that converts the values in the 'lang' parameter to how they will be actually represented in the record. {'fre':'fra'} or {'fre':'fr'}.  Missing/empty means to convert to iso 2 letter.",
-            required = false)
+            description = "langMap, that converts the values in the 'lang' parameter to how they will be actually represented in the record. {'fre':'fra'} or {'fre':'fr'}.  Missing/empty means to convert to iso 2 letter.")
         @RequestParam (name = "langMap", required = false)
             String  langMapJson,
         @Parameter(hidden = true)
@@ -433,23 +412,19 @@ public class KeywordsApi {
         @RequestParam(name = "thesaurus")
             String sThesaurusName,
         @Parameter(
-            description = "Languages.",
-            required = false)
+            description = "Languages.")
         @RequestParam(name = "lang", required = false)
             String[] langs,
         @Parameter(
-            description = "Only print the keyword, no thesaurus information.",
-            required = false)
+            description = "Only print the keyword, no thesaurus information.")
         @RequestParam(required = false, defaultValue = "false")
             boolean keywordOnly,
         @Parameter(
-            description = "XSL template to use (ISO19139 keyword by default, see convert.xsl).",
-            required = false)
+            description = "XSL template to use (ISO19139 keyword by default, see convert.xsl).")
         @RequestParam(required = false)
             String transformation,
         @Parameter(
-            description = "langMap, that converts the values in the 'lang' parameter to how they will be actually represented in the record. {'fre':'fra'} or {'fre':'fr'}.  Missing/empty means to convert to iso 2 letter.",
-            required = false)
+            description = "langMap, that converts the values in the 'lang' parameter to how they will be actually represented in the record. {'fre':'fra'} or {'fre':'fr'}.  Missing/empty means to convert to iso 2 letter.")
         @RequestParam (name = "langMap", required = false)
             String  langMapJson,
         @Parameter(hidden = true)
@@ -494,7 +469,7 @@ public class KeywordsApi {
         if (thesaurus == null) {
             String finalSThesaurusName = sThesaurusName;
             Optional<Thesaurus> thesaurusEntry = thesaurusManager.getThesauriMap().values().stream().filter(t -> t.getKey().endsWith(finalSThesaurusName)).findFirst();
-            if (!thesaurusEntry.isPresent()) {
+            if (thesaurusEntry.isEmpty()) {
                 throw new IllegalArgumentException(String.format(
                     "Thesaurus '%s' not found.", sThesaurusName));
             } else {
@@ -506,7 +481,12 @@ public class KeywordsApi {
         if (langs == null) {
             langs = context.getLanguage().split(",");
         }
-        String[] iso3langCodes = Arrays.copyOf(langs, langs.length);
+        List<String> langList = new ArrayList<>(List.of(langs));
+        if (!langList.contains("eng")) {
+            langList.add("eng");
+        }
+
+        String[] iso3langCodes = langList.toArray(String[]::new);
         for (int i = 0; i < langs.length; i++) {
             if (StringUtils.isNotEmpty(langs[i])) {
                 langs[i] = mapper.iso639_2_to_iso639_1(langs[i], langs[i].substring(0,2));  //default: fra -> fr
@@ -514,9 +494,9 @@ public class KeywordsApi {
         }
 
         Element descKeys;
-        Map<String, String> jsonResponse = new HashMap<>();
+        Map<String, Map<String, String>> jsonResponse = new HashMap<>();
 
-        uri = URLDecoder.decode(uri, "UTF-8");
+        uri = URLDecoder.decode(uri, StandardCharsets.UTF_8);
 
         if (uri == null) {
             descKeys = new Element("descKeys");
@@ -550,10 +530,15 @@ public class KeywordsApi {
             descKeys = new Element("descKeys");
             for (KeywordBean keywordBean : kbList) {
                 if (isJson) {
+
+                    Map<String, String> keywordInfo = new HashMap<>();
+                    keywordInfo.put("label", keywordBean.getDefaultValue());
+                    keywordInfo.put("definition", StringUtils.isNotEmpty(keywordBean.getDefaultDefinition()) ?
+                        keywordBean.getDefaultDefinition() : keywordBean.getDefaultValue());
                     jsonResponse.put(
                         keywordBean.getUriCode(),
                         // Requested lang or the first non empty value
-                        keywordBean.getDefaultValue()
+                        keywordInfo
                     );
                 } else {
                     KeywordsSearcher.toRawElement(descKeys, keywordBean);
@@ -566,8 +551,8 @@ public class KeywordsApi {
             JSONObject obj = JSONObject.fromObject(langMapJson);
             langConversion = new Element("languageConversions");
             for(Object entry : obj.entrySet()) {
-                String key = ((Map.Entry) entry).getKey().toString();
-                String value = ((Map.Entry) entry).getValue().toString();
+                String key = ((Map.Entry<?, ?>) entry).getKey().toString();
+                String value = ((Map.Entry<?, ?>) entry).getValue().toString();
                 Element conv = new Element("conversion");
                 conv.setAttribute("from", key);
                 conv.setAttribute("to", value.replace("#",""));
@@ -593,12 +578,7 @@ public class KeywordsApi {
 
             Element requestParams = new Element("request");
             for (Map.Entry<String, String> e : allRequestParams.entrySet()) {
-                if (e.getKey().equals("lang")) {
-                    requestParams.addContent(new Element(e.getKey())
-                        .setText(String.join(",", iso3langCodes)));
-                } else {
-                    requestParams.addContent(new Element(e.getKey()).setText(e.getValue()));
-                }
+                requestParams.addContent(new Element(e.getKey()).setText(e.getValue()));
             }
             if (langConversion != null) {
                 requestParams.addContent(langConversion);
@@ -618,7 +598,6 @@ public class KeywordsApi {
      *
      * @param thesaurus the thesaurus
      * @param response  the response
-     * @return the thesaurus
      * @throws Exception the exception
      */
     @io.swagger.v3.oas.annotations.Operation(
@@ -659,10 +638,12 @@ public class KeywordsApi {
         response.setContentType("text/xml");
         response.setHeader("Content-Disposition", "attachment;filename=" + directoryFile.getFileName());
         ServletOutputStream out = response.getOutputStream();
-        BufferedReader reader1 = new BufferedReader(new InputStreamReader(new FileInputStream(directoryFile.toFile()), StandardCharsets.UTF_8));
-        IOUtils.copy(reader1, out);
-        out.flush();
-        out.close();
+        try (BufferedReader reader1 = new BufferedReader(new InputStreamReader(new FileInputStream(directoryFile.toFile()), StandardCharsets.UTF_8))) {
+            IOUtils.copy(reader1, out, StandardCharsets.UTF_8);
+        } finally {
+            out.flush();
+            out.close();
+        }
     }
 
 
@@ -670,7 +651,6 @@ public class KeywordsApi {
      * Delete thesaurus.
      *
      * @param thesaurus the thesaurus
-     * @return the element
      * @throws Exception the exception
      */
     @io.swagger.v3.oas.annotations.Operation(
@@ -701,7 +681,7 @@ public class KeywordsApi {
             throw new ResourceNotFoundException(String.format(
                 "Thesaurus with identifier '%s' not found in the catalogue. Should be one of: %s",
                 thesaurus,
-                thesaurusMan.getThesauriMap().keySet().toString()
+                thesaurusMan.getThesauriMap().keySet()
             ));
         }
         Path item = thesaurusObject.getFile();
@@ -765,9 +745,9 @@ public class KeywordsApi {
         boolean fileUpload = file != null && !file.isEmpty();
 
         // Upload RDF file
-        Path rdfFile = null;
-        String fname = null;
-        File tempDir = null;
+        Path rdfFile;
+        String fname;
+        File tempDir;
 
         if (fileUpload) {
 
@@ -795,7 +775,7 @@ public class KeywordsApi {
             }
 
             long fsize;
-            if (rdfFile != null && Files.exists(rdfFile)) {
+            if (Files.exists(rdfFile)) {
                 fsize = Files.size(rdfFile);
             } else {
                 throw new MissingServletRequestParameterException("Thesaurus file doesn't exist", "file");
@@ -1015,7 +995,7 @@ public class KeywordsApi {
             CSVParser csvParser = new CSVParser(reader, CSVFormat.DEFAULT
                 .withFirstRecordAsHeader()
                 .withIgnoreHeaderCase()
-                .withTrim());
+                .withTrim())
         ) {
 
             Map<String, KeywordBean> allConcepts = new LinkedHashMap<>();
@@ -1078,7 +1058,7 @@ public class KeywordsApi {
             }
 
             Element scheme = buildConceptScheme(csvFile, thesaurusTitle, thesaurusNamespaceUrl);
-            if(broaderLinks.size() > 0 && !topConcepts.isEmpty()) {
+            if(!broaderLinks.isEmpty() && !topConcepts.isEmpty()) {
                 topConcepts.forEach(t -> {
                     Element topConcept = new Element("hasTopConcept", SKOS_NAMESPACE);
                     topConcept.setAttribute("resource", t, RDF_NAMESPACE);
@@ -1104,9 +1084,7 @@ public class KeywordsApi {
                 key,
                 Arrays.stream(csvRecord.get(column).split(conceptLinkSeparator))
                     .filter(StringUtils::isNotEmpty)
-                    .map(c -> {
-                        return thesaurusNamespaceUrl + c;
-                    })
+                    .map(c -> thesaurusNamespaceUrl + c)
                     .collect(Collectors.toList())
             );
         }
@@ -1215,7 +1193,7 @@ public class KeywordsApi {
         boolean registryUpload = !StringUtils.isEmpty(registryUrl);
 
         // Upload RDF file
-        Path rdfFile = null;
+        Path rdfFile;
         String fname = null;
 
         // Specific upload steps
@@ -1312,9 +1290,9 @@ public class KeywordsApi {
     /**
      * Update the information related to a local thesaurus .
      *
-     * @param thesaurusInfo
-     * @return
-     * @throws Exception
+     * @param thesaurus     name of the thesaurus to update.
+     * @param thesaurusInfo thesaurus information to update.
+     * @throws Exception the exception
      */
     @io.swagger.v3.oas.annotations.Operation(
         summary = "Updates the information of a local thesaurus",
@@ -1373,11 +1351,11 @@ public class KeywordsApi {
      * Download for each language the codelist from the registry. Combine
      * them into one XML document which is then XSLT processed for SKOS conversion.
      *
-     * @param registryUrl the registry url
-     * @param registryType
-     * @param itemName    the item name
-     * @param lang        the selected languages
-     * @param context     the context
+     * @param registryUrl  the registry url
+     * @param registryType type of registry
+     * @param itemName     the item name
+     * @param lang         the selected languages
+     * @param context      the context
      * @return the path
      * @throws Exception the exception
      */
@@ -1453,7 +1431,6 @@ public class KeywordsApi {
      * @param fname   the fname
      * @param type    the type
      * @param dir     the dir
-     * @return Element thesaurus uploaded
      * @throws Exception the exception
      */
     private void uploadThesaurus(Path rdfFile, String style,
